--- a/app/scss/_topnav.scss
+++ b/app/scss/_topnav.scss
@@ -34,30 +34,30 @@
 	border: 2px solid red;
 	position: fixed;
 /*	height: 100vh;*/
-	width: 40vh !important;
+	width: 100%;
 	height: 100vh;
-	background-color: $gray;
+
 	top: 0;
-	left: -50vh;
-	padding: 2rem !important;	
+	left: 0;	
 /*	overflow: hidden;*/
 	z-index: 20000000;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	::scrollbar {
-		display: none;
-	}
+/*	overflow: hidden;*/
+overflow: auto;
+/*	display: flex;
+	justify-content: flex-start;*/
+	display: none;
 }
 .toc {
 	border: 2px solid green;
+	padding: 2rem;
+	background-color: $gray;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	height: 92vh;
-	overflow-y: auto;
-	overflow-x: hidden;
-	width: 100%;
+	justify-content: flex-start;
+	height: 180vh;
+/*	overflow-y: auto;
+	overflow-x: hidden;*/
+	width: 30%;
 /*	position: fixed;*/
 /*	height: 100vh;*/
 /*		overflow-y: auto !important;
@@ -70,6 +70,7 @@
 	display: flex;
 	flex-direction: column;
 	align-content: center;
+	height: auto;
 /*height: auto;*/
 	width: 100%;
 /*	overflow: auto;*/
